--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@testing-library/user-event": "^14.5.2",
         "@vitejs/plugin-react": "^4.3.4",
         "jsdom": "^25.0.1",
+        "redux-mock-store": "^1.5.5",
         "tailwindcss": "^3.4.17",
         "vitest": "^2.1.8"
     }
